deployment-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-petclinic-deployment
  namespace: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic 
    spec:
      containers:
      - image: asia-south1-docker.pkg.dev/halogen-byte-388404/petclinic-app-repo/petclinic:v1
        imagePullPolicy: IfNotPresent
        name: petclinic-image
        ports:
        - containerPort: 8080
          protocol: TCP
