deployment-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-petclinic-service
  namespace: petclinic
spec:
  selector:
    app: petclinic
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
