deployment-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: petclinic
spec:
  defaultBackend:
    service:
      name: app-petclinic-service
      port:
        number: 80
